k8s/qbittorrent/deployment.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
  namespace: apps
spec:
  selector:
    matchLabels:
      app: qbittorrent
  replicas: 1
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.1.4
          ports:
            - containerPort: 8080
              name: webui
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "500m"
          volumeMounts:
            - name: media
              mountPath: /downloads
            - name: qbittorrent-config
              mountPath: /config
      volumes:
        - name: media
          nfs:
            server: 192.168.1.67
            path: /media
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
      restartPolicy: Always
